@@ -1,3 +1,7 @@
+2008-10-23  Scott Ellington <scott.ellington@gmail.com> 
+
+	* Point.cs: add default ctor
+
 2008-10-22  Scott Ellington <scott.ellington@gmail.com> 
 
 	* Data/Shapefile/Shapefile.cs, Data/IFeatureSource.cs: add Extents
