@@ -1,3 +1,8 @@
+2008-10-23  Scott Ellington <scott.ellington@gmail.com> 
+
+	* Cumberland.InteractiveMap/Main.cs: copy improvements from Appomattox
+	* Cumberland.Drawing.OpenGL/MatrixHelper.cs: switch to doubles
+
 2008-10-22  Scott Ellington <scott.ellington@gmail.com> 
 
 	* Cumberland.TileViewerTest/TileProvider.aspx.cs,
